--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -586,8 +586,10 @@ This suggests that GPU-based solutions along with using more advanced hardware a
 interactive applications of AR. In \cite{mei11}, it is stated that for the Tsukuba image of Middlebury dataset, the CPU implementation takes 2.5 seconds whereas 
 the GPU implementation takes only 0.016 seconds. Their evaluations on a PC with Core2Duo 2.20GHz CPU and NVIDIA GeForce GTX 480 graphics card 
 show that their GPU implementation of ADCensus brings $140\times$ speedup in the processing speed.
-%, which can even improve to about 5 times faster with
-%the more modern hardware and graphics cards. 
+More speedup may be achieved using modern graphics cards; however, we cannot make a numerical comment on the amount of speedup as
+it depends on different specifications of the hardware and also the nature of the algorithm. If we were to look at only the number of cores
+alone, current hardware has $5$ times more cores than the hardware used by \cite{mei11}. With a software implementation that took advantage of the
+increase in the number of cores, we could expect an execution time of $0.0032$ seconds. 
 
 \subsection{Effect of Refinement}
 In this experiment, we studied the effect of the post processing steps, also referred to as the \textit{refinement steps}, 
