--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -589,7 +589,7 @@ show that their GPU implementation of ADCensus brings $140\times$ speedup in the
 More speedup may be achieved using modern graphics cards; however, we cannot make a numerical comment on the amount of speedup as
 it depends on different specifications of the hardware and also the nature of the algorithm. If we were to look at only the number of cores
 alone, current hardware has $5$ times more cores than the hardware used by \cite{mei11}. With a software implementation that took advantage of the
-increase in the number of cores, we could expect an execution time of $0.0032$ seconds. 
+increase in the number of cores, we could in principle expect an execution time of $0.0032$ seconds. 
 
 \subsection{Effect of Refinement}
 In this experiment, we studied the effect of the post processing steps, also referred to as the \textit{refinement steps}, 
